--- a/docs/Robotics/Control/Robust_OC.mdx
+++ b/docs/Robotics/Control/Robust_OC.mdx
@@ -88,6 +88,8 @@ Clearly, the outcome of the game depends on when and on what information each pl
 
 The same order and information aspects are important for our zero-sum dynamic games. In addition to the order of play, it is also important as to what information each agent has when they are making their decision at some time $s\in [s, T]$.
 
+#### Example 2
+
 To understand this, let's again consider an example:
 
 <div style={{textAlign: 'center'}}>
@@ -169,7 +171,7 @@ $$
 
 HJI equation looks very similar to HJB equation with min operator replaces by min-max operator.
 
-The tools that are available to solve HJB euqation can also be used to solve the HJI equation (at least most of them can be used).
+The tools that are available to solve HJB equation can also be used to solve the HJI equation (at least most of them can be used).
 
 ### Demo
 
