--- a/docs/Robotics/Control/Robust_OC.mdx
+++ b/docs/Robotics/Control/Robust_OC.mdx
@@ -98,7 +98,7 @@ To understand this, let's again consider an example:
 
 </div>
 
-Here, $u$ wants to reach G1 or G2 without being intercepted by $d$. On the other hand, d wants to intercept $u$.
+Here, $u$ wants to reach G1 or G2 without being intercepted by $d$. On the other hand, $d$ wants to intercept $u$.
 
 #### Open-loop Formulation
 
@@ -177,7 +177,7 @@ The tools that are available to solve the HJB equation can also be used to solve
 
 <div style={{textAlign: 'center'}}>
 
-![](/img/Robotics/Robust_OC_4.png)
+![](/img/Robotics/Robust_OC_5.png)
 
 </div>
 
